syntax.output
State 154 conflicts: 6 shift/reduce


Grammar

    0 $accept: program "eof"

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | ε

    4 global_declaration: typedef_declaration
    5                   | class_declaration
    6                   | enum_declaration
    7                   | global_var_declaration
    8                   | func_declaration

    9 typedef_declaration: "typedef" typename "id" dims ";"

   10 typename: standard_type
   11         | "id"

   12 standard_type: "char"
   13              | "int"
   14              | "float"
   15              | "void"

   16 dims: dims dim
   17     | ε

   18 dim: "[" "int const" "]"
   19    | "[" "]"

   20 class_declaration: "class" "id" class_body ";"

   21 class_body: parent "{" members_methods "}"

   22 parent: ":" "id"
   23       | ε

   24 members_methods: members_methods access member_or_method
   25                | access member_or_method

   26 access: "private" ":"
   27       | "protected" ":"
   28       | "public" ":"
   29       | ε

   30 member_or_method: member
   31                 | method

   32 member: var_declaration

   33 var_declaration: typename variabledefs ";"

   34 variabledefs: variabledefs "," variabledef
   35             | variabledef

   36 variabledef: "id" dims

   37 method: short_func_declaration

   38 short_func_declaration: short_par_func_header ";"
   39                       | nopar_func_header ";"

   40 short_par_func_header: func_header_start "(" parameter_type_list ")"

   41 func_header_start: typename "id"

   42 parameter_type_list: parameter_type_list "," typename pass_dims
   43                    | typename pass_dims

   44 pass_dims: dims
   45          | "&"

   46 nopar_func_header: func_header_start "(" ")"

   47 enum_declaration: "enum" "id" enum_body ";"

   48 enum_body: "{" id_list "}"

   49 id_list: id_list "," "id" initializer
   50        | "id" initializer

   51 global_var_declaration: typename init_variabledefs ";"

   52 init_variabledefs: init_variabledefs "," init_variabledef
   53                  | init_variabledef

   54 init_variabledef: variabledef initializer

   55 initializer: "=" init_value
   56            | ε

   57 init_value: sign constant
   58           | sign "id"
   59           | "{" init_values "}"
   60           | "string"

   61 sign: "+ -"
   62     | ε

   63 constant: "char const"
   64         | "int const"
   65         | "double const"

   66 init_values: init_values "," init_value
   67            | init_value

   68 func_declaration: short_func_declaration
   69                 | full_func_declaration

   70 full_func_declaration: full_par_func_header "{" decl_statements "}"
   71                      | nopar_class_func_header "{" decl_statements "}"
   72                      | nopar_func_header "{" decl_statements "}"

   73 full_par_func_header: class_func_header_start "(" parameter_list ")"
   74                     | func_header_start "(" parameter_list ")"

   75 class_func_header_start: typename func_class "id"

   76 func_class: "id" "::"

   77 parameter_list: parameter_list "," typename pass_variabledef
   78               | typename pass_variabledef

   79 pass_variabledef: variabledef
   80                 | "&" "id"

   81 nopar_class_func_header: class_func_header_start "(" ")"

   82 decl_statements: declarations statements
   83                | declarations
   84                | statements
   85                | ε

   86 declarations: declarations decltype typename variabledefs ";"
   87             | decltype typename variabledefs ";"

   88 decltype: "static"
   89         | ε

   90 statements: statements statement
   91           | statement

   92 statement: expression_statement
   93          | if_statement
   94          | while_statement
   95          | for_statement
   96          | switch_statement
   97          | return_statement
   98          | io_statement
   99          | comp_statement
  100          | "continue" ";"
  101          | "break" ";"
  102          | ";"

  103 expression_statement: general_expression ";"

  104 general_expression: general_expression "," general_expression
  105                   | assignment

  106 assignment: variable "=" assignment
  107           | variable "=" "string"
  108           | expression

  109 variable: variable "[" general_expression "]"
  110         | variable "." "id"
  111         | decltype "id"
  112         | "this"

  113 expression: expression "||" expression
  114           | expression "&&" expression
  115           | expression "== !=" expression
  116           | expression "< >= < <=" expression
  117           | expression "+ -" expression
  118           | expression "* / %" expression
  119           | "!" expression
  120           | "+ -" expression
  121           | "SIZEOF" expression
  122           | "++ --" variable
  123           | variable "++ --"
  124           | variable
  125           | variable "(" expression_list ")"
  126           | "length" "(" general_expression ")"
  127           | constant
  128           | "(" general_expression ")"
  129           | "(" standard_type ")"

  130 expression_list: general_expression
  131                | ε

  132 if_statement: "if" "(" general_expression ")" statement if_tail

  133 if_tail: "else" statement
  134        | ε

  135 while_statement: "while" "(" general_expression ")" statement

  136 for_statement: "for" "(" optexpr ";" optexpr ";" optexpr ")" statement

  137 optexpr: general_expression
  138        | ε

  139 switch_statement: "switch" "(" general_expression ")" switch_tail

  140 switch_tail: "{" decl_cases "}"
  141            | single_casestatement

  142 decl_cases: declarations casestatements
  143           | declarations
  144           | casestatements
  145           | ε

  146 casestatements: casestatements casestatement
  147               | casestatement

  148 casestatement: "case" constant ":" casestatement
  149              | "case" constant ":" statements
  150              | "default" ":" statements

  151 single_casestatement: "case" constant ":" single_casestatement
  152                     | "case" constant ":" statement

  153 return_statement: "return" optexpr ";"

  154 io_statement: "cin" ">>" in_list ";"
  155             | "cout" "<<" out_list ";"

  156 in_list: in_item ">>" in_list
  157        | in_item

  158 out_list: out_item "<<" out_list
  159         | out_item

  160 in_item: variable

  161 out_item: general_expression
  162         | "string"

  163 comp_statement: "{" decl_statements "}"

  164 main_function: main_header "{" decl_statements "}"

  165 main_header: "int" "main" "(" ")"


Terminals, with rules where they appear

    "eof" (0) 0
    error (256)
    "typedef" (258) 9
    "char" (259) 12
    "int" (260) 13 165
    "float" (261) 14
    "enum" (262) 47
    "class" (263) 20
    "private" (264) 26
    "protected" (265) 27
    "public" (266) 28
    "void" (267) 15
    "static" (268) 88
    "continue" (269) 100
    "break" (270) 101
    "this" (271) 112
    "if" (272) 132
    "else" (273) 133
    "while" (274) 135
    "for" (275) 136
    "switch" (276) 139
    "case" (277) 148 149 151 152
    "default" (278) 150
    "return" (279) 153
    "cin" (280) 154
    "cout" (281) 155
    "length" (282) 126
    "main" (283) 165
    "id" <strval> (284) 9 11 20 22 36 41 47 49 50 58 75 76 80 110 111
    "int const" <intval> (285) 18 64
    "double const" <doubleval> (286) 65
    "char const" <charval> (287) 63
    "||" (288) 113
    "&&" (289) 114
    "== !=" (290) 115
    "< >= < <=" (291) 116
    "+ -" (292) 61 117 120
    "* / %" (293) 118
    "!" (294) 119
    "++ --" (295) 122 123
    "SIZEOF" (296) 121
    "string" (297) 60 107 162
    "(" (298) 40 46 73 74 81 125 126 128 129 132 135 136 139 165
    ")" (299) 40 46 73 74 81 125 126 128 129 132 135 136 139 165
    ";" (300) 9 20 33 38 39 47 51 86 87 100 101 102 103 136 153 154 155
    "." (301) 110
    "," (302) 34 42 49 52 66 77 104
    "=" (303) 55 106 107
    ":" (304) 22 26 27 28 148 149 150 151 152
    "[" (305) 18 19 109
    "]" (306) 18 19 109
    "&" (307) 45 80
    "{" (308) 21 48 59 70 71 72 140 163 164
    "}" (309) 21 48 59 70 71 72 140 163 164
    "::" (310) 76
    ">>" (311) 154 156
    "<<" (312) 155 158
    LOWER_THAN_ELSE (313)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    program (60)
        on left: 1
        on right: 0
    global_declarations (61)
        on left: 2 3
        on right: 1 2
    global_declaration (62)
        on left: 4 5 6 7 8
        on right: 2
    typedef_declaration (63)
        on left: 9
        on right: 4
    typename (64)
        on left: 10 11
        on right: 9 33 41 42 43 51 75 77 78 86 87
    standard_type (65)
        on left: 12 13 14 15
        on right: 10 129
    dims (66)
        on left: 16 17
        on right: 9 16 36 44
    dim (67)
        on left: 18 19
        on right: 16
    class_declaration (68)
        on left: 20
        on right: 5
    class_body (69)
        on left: 21
        on right: 20
    parent (70)
        on left: 22 23
        on right: 21
    members_methods (71)
        on left: 24 25
        on right: 21 24
    access (72)
        on left: 26 27 28 29
        on right: 24 25
    member_or_method (73)
        on left: 30 31
        on right: 24 25
    member (74)
        on left: 32
        on right: 30
    var_declaration (75)
        on left: 33
        on right: 32
    variabledefs (76)
        on left: 34 35
        on right: 33 34 86 87
    variabledef (77)
        on left: 36
        on right: 34 35 54 79
    method (78)
        on left: 37
        on right: 31
    short_func_declaration (79)
        on left: 38 39
        on right: 37 68
    short_par_func_header (80)
        on left: 40
        on right: 38
    func_header_start (81)
        on left: 41
        on right: 40 46 74
    parameter_type_list (82)
        on left: 42 43
        on right: 40 42
    pass_dims (83)
        on left: 44 45
        on right: 42 43
    nopar_func_header (84)
        on left: 46
        on right: 39 72
    enum_declaration (85)
        on left: 47
        on right: 6
    enum_body (86)
        on left: 48
        on right: 47
    id_list (87)
        on left: 49 50
        on right: 48 49
    global_var_declaration (88)
        on left: 51
        on right: 7
    init_variabledefs (89)
        on left: 52 53
        on right: 51 52
    init_variabledef (90)
        on left: 54
        on right: 52 53
    initializer (91)
        on left: 55 56
        on right: 49 50 54
    init_value (92)
        on left: 57 58 59 60
        on right: 55 66 67
    sign (93)
        on left: 61 62
        on right: 57 58
    constant (94)
        on left: 63 64 65
        on right: 57 127 148 149 151 152
    init_values (95)
        on left: 66 67
        on right: 59 66
    func_declaration (96)
        on left: 68 69
        on right: 8
    full_func_declaration (97)
        on left: 70 71 72
        on right: 69
    full_par_func_header (98)
        on left: 73 74
        on right: 70
    class_func_header_start (99)
        on left: 75
        on right: 73 81
    func_class (100)
        on left: 76
        on right: 75
    parameter_list (101)
        on left: 77 78
        on right: 73 74 77
    pass_variabledef (102)
        on left: 79 80
        on right: 77 78
    nopar_class_func_header (103)
        on left: 81
        on right: 71
    decl_statements (104)
        on left: 82 83 84 85
        on right: 70 71 72 163 164
    declarations (105)
        on left: 86 87
        on right: 82 83 86 142 143
    decltype (106)
        on left: 88 89
        on right: 86 87 111
    statements (107)
        on left: 90 91
        on right: 82 84 90 149 150
    statement (108)
        on left: 92 93 94 95 96 97 98 99 100 101 102
        on right: 90 91 132 133 135 136 152
    expression_statement (109)
        on left: 103
        on right: 92
    general_expression (110)
        on left: 104 105
        on right: 103 104 109 126 128 130 132 135 137 139 161
    assignment (111)
        on left: 106 107 108
        on right: 105 106
    variable (112)
        on left: 109 110 111 112
        on right: 106 107 109 110 122 123 124 125 160
    expression (113)
        on left: 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
        on right: 108 113 114 115 116 117 118 119 120 121
    expression_list (114)
        on left: 130 131
        on right: 125
    if_statement (115)
        on left: 132
        on right: 93
    if_tail (116)
        on left: 133 134
        on right: 132
    while_statement (117)
        on left: 135
        on right: 94
    for_statement (118)
        on left: 136
        on right: 95
    optexpr (119)
        on left: 137 138
        on right: 136 153
    switch_statement (120)
        on left: 139
        on right: 96
    switch_tail (121)
        on left: 140 141
        on right: 139
    decl_cases (122)
        on left: 142 143 144 145
        on right: 140
    casestatements (123)
        on left: 146 147
        on right: 142 144 146
    casestatement (124)
        on left: 148 149 150
        on right: 146 147 148
    single_casestatement (125)
        on left: 151 152
        on right: 141 151
    return_statement (126)
        on left: 153
        on right: 97
    io_statement (127)
        on left: 154 155
        on right: 98
    in_list (128)
        on left: 156 157
        on right: 154 156
    out_list (129)
        on left: 158 159
        on right: 155 158
    in_item (130)
        on left: 160
        on right: 156 157
    out_item (131)
        on left: 161 162
        on right: 158 159
    comp_statement (132)
        on left: 163
        on right: 99
    main_function (133)
        on left: 164
        on right: 1
    main_header (134)
        on left: 165
        on right: 164


State 0

    0 $accept: • program "eof"

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program • "eof"

    "eof"  shift, and go to state 3


State 2

    1 program: global_declarations • main_function
    2 global_declarations: global_declarations • global_declaration

    "typedef"  shift, and go to state 4
    "char"     shift, and go to state 5
    "int"      shift, and go to state 6
    "float"    shift, and go to state 7
    "enum"     shift, and go to state 8
    "class"    shift, and go to state 9
    "void"     shift, and go to state 10
    "id"       shift, and go to state 11

    global_declaration       go to state 12
    typedef_declaration      go to state 13
    typename                 go to state 14
    standard_type            go to state 15
    class_declaration        go to state 16
    short_func_declaration   go to state 17
    short_par_func_header    go to state 18
    func_header_start        go to state 19
    nopar_func_header        go to state 20
    enum_declaration         go to state 21
    global_var_declaration   go to state 22
    func_declaration         go to state 23
    full_func_declaration    go to state 24
    full_par_func_header     go to state 25
    class_func_header_start  go to state 26
    nopar_class_func_header  go to state 27
    main_function            go to state 28
    main_header              go to state 29


State 3

    0 $accept: program "eof" •

    $default  accept


State 4

    9 typedef_declaration: "typedef" • typename "id" dims ";"

    "char"   shift, and go to state 5
    "int"    shift, and go to state 30
    "float"  shift, and go to state 7
    "void"   shift, and go to state 10
    "id"     shift, and go to state 11

    typename       go to state 31
    standard_type  go to state 15


State 5

   12 standard_type: "char" •

    $default  reduce using rule 12 (standard_type)


State 6

   13 standard_type: "int" •
  165 main_header: "int" • "main" "(" ")"

    "main"  shift, and go to state 32

    $default  reduce using rule 13 (standard_type)


State 7

   14 standard_type: "float" •

    $default  reduce using rule 14 (standard_type)


State 8

   47 enum_declaration: "enum" • "id" enum_body ";"

    "id"  shift, and go to state 33


State 9

   20 class_declaration: "class" • "id" class_body ";"

    "id"  shift, and go to state 34


State 10

   15 standard_type: "void" •

    $default  reduce using rule 15 (standard_type)


State 11

   11 typename: "id" •

    $default  reduce using rule 11 (typename)


State 12

    2 global_declarations: global_declarations global_declaration •

    $default  reduce using rule 2 (global_declarations)


State 13

    4 global_declaration: typedef_declaration •

    $default  reduce using rule 4 (global_declaration)


State 14

   41 func_header_start: typename • "id"
   51 global_var_declaration: typename • init_variabledefs ";"
   75 class_func_header_start: typename • func_class "id"

    "id"  shift, and go to state 35

    variabledef        go to state 36
    init_variabledefs  go to state 37
    init_variabledef   go to state 38
    func_class         go to state 39


State 15

   10 typename: standard_type •

    $default  reduce using rule 10 (typename)


State 16

    5 global_declaration: class_declaration •

    $default  reduce using rule 5 (global_declaration)


State 17

   68 func_declaration: short_func_declaration •

    $default  reduce using rule 68 (func_declaration)


State 18

   38 short_func_declaration: short_par_func_header • ";"

    ";"  shift, and go to state 40


State 19

   40 short_par_func_header: func_header_start • "(" parameter_type_list ")"
   46 nopar_func_header: func_header_start • "(" ")"
   74 full_par_func_header: func_header_start • "(" parameter_list ")"

    "("  shift, and go to state 41


State 20

   39 short_func_declaration: nopar_func_header • ";"
   72 full_func_declaration: nopar_func_header • "{" decl_statements "}"

    ";"  shift, and go to state 42
    "{"  shift, and go to state 43


State 21

    6 global_declaration: enum_declaration •

    $default  reduce using rule 6 (global_declaration)


State 22

    7 global_declaration: global_var_declaration •

    $default  reduce using rule 7 (global_declaration)


State 23

    8 global_declaration: func_declaration •

    $default  reduce using rule 8 (global_declaration)


State 24

   69 func_declaration: full_func_declaration •

    $default  reduce using rule 69 (func_declaration)


State 25

   70 full_func_declaration: full_par_func_header • "{" decl_statements "}"

    "{"  shift, and go to state 44


State 26

   73 full_par_func_header: class_func_header_start • "(" parameter_list ")"
   81 nopar_class_func_header: class_func_header_start • "(" ")"

    "("  shift, and go to state 45


State 27

   71 full_func_declaration: nopar_class_func_header • "{" decl_statements "}"

    "{"  shift, and go to state 46


State 28

    1 program: global_declarations main_function •

    $default  reduce using rule 1 (program)


State 29

  164 main_function: main_header • "{" decl_statements "}"

    "{"  shift, and go to state 47


State 30

   13 standard_type: "int" •

    $default  reduce using rule 13 (standard_type)


State 31

    9 typedef_declaration: "typedef" typename • "id" dims ";"

    "id"  shift, and go to state 48


State 32

  165 main_header: "int" "main" • "(" ")"

    "("  shift, and go to state 49


State 33

   47 enum_declaration: "enum" "id" • enum_body ";"

    "{"  shift, and go to state 50

    enum_body  go to state 51


State 34

   20 class_declaration: "class" "id" • class_body ";"

    ":"  shift, and go to state 52

    $default  reduce using rule 23 (parent)

    class_body  go to state 53
    parent      go to state 54


State 35

   36 variabledef: "id" • dims
   41 func_header_start: typename "id" •
   76 func_class: "id" • "::"

    "::"  shift, and go to state 55

    "("       reduce using rule 41 (func_header_start)
    $default  reduce using rule 17 (dims)

    dims  go to state 56


State 36

   54 init_variabledef: variabledef • initializer

    "="  shift, and go to state 57

    $default  reduce using rule 56 (initializer)

    initializer  go to state 58


State 37

   51 global_var_declaration: typename init_variabledefs • ";"
   52 init_variabledefs: init_variabledefs • "," init_variabledef

    ";"  shift, and go to state 59
    ","  shift, and go to state 60


State 38

   53 init_variabledefs: init_variabledef •

    $default  reduce using rule 53 (init_variabledefs)


State 39

   75 class_func_header_start: typename func_class • "id"

    "id"  shift, and go to state 61


State 40

   38 short_func_declaration: short_par_func_header ";" •

    $default  reduce using rule 38 (short_func_declaration)


State 41

   40 short_par_func_header: func_header_start "(" • parameter_type_list ")"
   46 nopar_func_header: func_header_start "(" • ")"
   74 full_par_func_header: func_header_start "(" • parameter_list ")"

    "char"   shift, and go to state 5
    "int"    shift, and go to state 30
    "float"  shift, and go to state 7
    "void"   shift, and go to state 10
    "id"     shift, and go to state 11
    ")"      shift, and go to state 62

    typename             go to state 63
    standard_type        go to state 15
    parameter_type_list  go to state 64
    parameter_list       go to state 65


State 42

   39 short_func_declaration: nopar_func_header ";" •

    $default  reduce using rule 39 (short_func_declaration)


State 43

   72 full_func_declaration: nopar_func_header "{" • decl_statements "}"

    "static"        shift, and go to state 66
    "continue"      shift, and go to state 67
    "break"         shift, and go to state 68
    "this"          shift, and go to state 69
    "if"            shift, and go to state 70
    "while"         shift, and go to state 71
    "for"           shift, and go to state 72
    "switch"        shift, and go to state 73
    "return"        shift, and go to state 74
    "cin"           shift, and go to state 75
    "cout"          shift, and go to state 76
    "length"        shift, and go to state 77
    "int const"     shift, and go to state 78
    "double const"  shift, and go to state 79
    "char const"    shift, and go to state 80
    "+ -"           shift, and go to state 81
    "!"             shift, and go to state 82
    "++ --"         shift, and go to state 83
    "SIZEOF"        shift, and go to state 84
    "("             shift, and go to state 85
    ";"             shift, and go to state 86
    "{"             shift, and go to state 87

    "}"       reduce using rule 85 (decl_statements)
    $default  reduce using rule 89 (decltype)

    constant              go to state 88
    decl_statements       go to state 89
    declarations          go to state 90
    decltype              go to state 91
    statements            go to state 92
    statement             go to state 93
    expression_statement  go to state 94
    general_expression    go to state 95
    assignment            go to state 96
    variable              go to state 97
    expression            go to state 98
    if_statement          go to state 99
    while_statement       go to state 100
    for_statement         go to state 101
    switch_statement      go to state 102
    return_statement      go to state 103
    io_statement          go to state 104
    comp_statement        go to state 105


State 44

   70 full_func_declaration: full_par_func_header "{" • decl_statements "}"

    "static"        shift, and go to state 66
    "continue"      shift, and go to state 67
    "break"         shift, and go to state 68
    "this"          shift, and go to state 69
    "if"            shift, and go to state 70
    "while"         shift, and go to state 71
    "for"           shift, and go to state 72
    "switch"        shift, and go to state 73
    "return"        shift, and go to state 74
    "cin"           shift, and go to state 75
    "cout"          shift, and go to state 76
    "length"        shift, and go to state 77
    "int const"     shift, and go to state 78
    "double const"  shift, and go to state 79
    "char const"    shift, and go to state 80
    "+ -"           shift, and go to state 81
    "!"             shift, and go to state 82
    "++ --"         shift, and go to state 83
    "SIZEOF"        shift, and go to state 84
    "("             shift, and go to state 85
    ";"             shift, and go to state 86
    "{"             shift, and go to state 87

    "}"       reduce using rule 85 (decl_statements)
    $default  reduce using rule 89 (decltype)

    constant              go to state 88
    decl_statements       go to state 106
    declarations          go to state 90
    decltype              go to state 91
    statements            go to state 92
    statement             go to state 93
    expression_statement  go to state 94
    general_expression    go to state 95
    assignment            go to state 96
    variable              go to state 97
    expression            go to state 98
    if_statement          go to state 99
    while_statement       go to state 100
    for_statement         go to state 101
    switch_statement      go to state 102
    return_statement      go to state 103
    io_statement          go to state 104
    comp_statement        go to state 105


State 45
